fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ li{ list-style: none; }
     position: absolute;
     top: 55px;
     right: 10px;
-    width: 220px;
+    width: 200px;
     background-color: #e4e4e4;
     border: 1px solid #d8d8d8;
     -moz-border-radius: 0 0 3px 3px;
@@ -50,17 +50,16 @@ li{ list-style: none; }
     border-radius: 0 0 3px 3px;
     -khtml-border-radius: 0 0 3px 3px;
     
-    box-shadow: 3px 1px 14px rgba( 0, 0, 0,  .3);
+    box-shadow: 3px 1px 14px rgba( 0, 0, 0,  .2);
     display: none;
 }
 
 .spinner-menu li{
     border-top: 2px solid #cbcbcb;
-    padding: 20px;
+    padding: 16px 20px;
     font-weight: 300;
 }
 
 .spinner-menu li:first-child{
     border: none;
-    padding: 20px
 }
